# songbook

./: README.md  init.lua  pyproject.toml
src/compile_songbook/: parse.py
src/compile_songbook/fonts/devpdf/: EBGaramond-Bold.pfa  EBGaramond-Italic.pfa  EBGaramond-Regular.pfa
src/songbook/: __init__.py  main.py  parse.py  songbook.ms
src/songbook/fonts/devpdf/: EBGaramond-BoldItalic.pfa
