[project]
name = "songbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ilya Simpson", email = "elliot@p-s.co.nz" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
compile-songbook = "songbook.main:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]
